TH-284 add example of multi-link image teaser

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
@@ -10,7 +10,7 @@
         <a class="button button-primary" href="{{ links|first.url }}">{{ links|first.text }}</a>
       {% else %}
         {% for link in links %}
-          <a href="{{ link.url }}">{{ link.text }}</a>
+          <a class="image-teaser__link" href="{{ link.url }}">{{ link.text }}</a>
         {% endfor %}
       {% endif %}
     </div>
