--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
@@ -68,6 +68,12 @@
         margin-bottom: 0;
       }
 
+      .image-teaser__link {
+        display: inline-block;
+        margin-top: 1em;
+        margin-right: 1em;
+      }
+
       a.button {
         margin-top: 1em;
 
