TH-284 adjust breadcrumb position

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/breadcrumbs/breadcrumbs.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/breadcrumbs/breadcrumbs.twig
@@ -8,7 +8,7 @@
 */
 #}
 {% if breadcrumb %}
-<nav class="breadcrumbs" role="navigation" aria-labelledby="system-breadcrumb">
+<nav class="breadcrumbs {% if class %}{{class}}{% endif %}" role="navigation" aria-labelledby="system-breadcrumb">
   <h2 class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
   <ol class="breadcrumb">
   {% for item in breadcrumb %}
