--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
@@ -8,7 +8,8 @@
   {% block page_header %}
     {% if breadcrumb %}
       {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
-          breadcrumb: breadcrumb,
+          class: breadcrumb.class,
+          breadcrumb: breadcrumb.breadcrumb,
         } %}
     {% endif %}
     {% include "@organisms/location-hero/location-hero.twig" with {
