--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
@@ -16,6 +16,14 @@
       left: calc(-2em - (100vw - 1500px));
     }
   }
+
+  &.hero {
+    left: 2em;
+
+    @include breakpoint("1350px") {
+      left: calc(((100vw - 1350px) / 2) + 2em);
+    }
+  }
 }
 
 .breadcrumb {
