TH-284 more rounded corners

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -96,6 +96,7 @@
       padding: 2em;
       background-color: rgba($primary-dark, 0.9);
       height: 100%;
+      border-radius: 5px;
 
       @include breakpoint($bp3) {
         display: none;
