--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -2,7 +2,7 @@
   <div class="location-hero__container">
     <div class="location-hero__content {% if img %}image{% endif %}">
       <div class="location-label">{{ type }}</div>
-      <h1>{{ name }}</h1>
+      <h1 class="location-hero__title">{{ name }}</h1>
       <div class="location-details">
         <div class="location-details__first">
           <span>Address</span>
