--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
@@ -3,7 +3,7 @@
   position: relative;
   margin-top: 3em;
 
-  h2 {
+  .link-list__title {
     color: $primary-dark;
     text-transform: uppercase;
     font-size: 2em;
@@ -27,6 +27,12 @@
         font-size: 1.25em;
         font-weight: 600;
         text-decoration: none;
+
+        &:hover,
+        &:focus {
+          color: $primary-dark;
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -49,7 +55,7 @@
 
 .cssanimations {
 
-  default states
+  // default states
   .link-list {
 
     h2 {
