TH-284 add focus

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -71,7 +71,8 @@
       background-size: cover;
       border-radius: 5px;
 
-      &:hover {
+      &:hover,
+      &:focus {
         transform: scale(1.05);
       }
 
