TH-284 add aria-controls for section menu

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.twig
@@ -1,6 +1,6 @@
 {{ attach_library('tower_health/section-menu') }}
 
-<button href="#" id="section-toggle-expand" class="toggle-expand section-toggle-expand">
+<button href="#" id="section-toggle-expand" class="toggle-expand section-toggle-expand" aria-controls='section-nav__container'>
   <span class="toggle-expand__open">
     {% include "@atoms/04-images/icons/_icon.twig" with {
       icon_base_class: "icon",
