TH-316 add submit button

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
@@ -5,25 +5,25 @@
   full_width: false,
   centered: true
 }%}
-  
+
   {% block page_header %}
     {% include "@organisms/basic-header/basic-header.twig" with {
       breadcrumb: header.breadcrumb
     } %}
   {% endblock %}
-  
+
   {% block page_content %}
     {% include "@molecules/banner-message/banner-message.twig" with {
       banner_text: emergency_banner
     } %}
-    
+
     {% if doctor_reference %}
       {% include "@molecules/banner-message/banner-message.twig" with {
         banner_text: "You are currently requesting an appointment with " ~ doctor_reference,
         banner_type: 'secondary'
       } %}
     {% endif %}
-    
+
     <form>
     {% for item in form_sections %}
       {% include "@organisms/form-section/form-section.twig" with {
@@ -31,13 +31,16 @@
         section_heading: item.section_heading,
         section_items: item.section_items
       } %}
-      
+
     {% endfor %}
     </form>
-    
+
     {% include "@molecules/rich-text/rich-text.twig" %}
-    
-    Form Sections
+
+    {% include "@atoms/06-buttons/01-button.twig" with {
+      button_content: button.text,
+      button_url: button.url,
+    } %}
   {% endblock %}
-  
+
 {% endembed %}
