--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
@@ -1,14 +1,14 @@
 .form-item--checkboxes,
 .form-item--checkbox__item {
   @include list-reset;
-  
+
   input {
     margin: .25rem rhythm(.5) .5rem .25rem;
     position: absolute;
     left: 0;
     top: 2px;
     z-index: 1;
-    
+
     &::before {
       position: absolute;
       top: -0.25rem;
@@ -22,7 +22,7 @@
       border-radius: 4px;
       box-shadow: inset 1px 1px 3px rgba($gray-dark, .15);
     }
-    
+
     &:checked::after {
       position: absolute;
       background: url('/pattern-lab/public/images/checkbox.svg');
@@ -35,16 +35,16 @@
       height: 15px;
       width: 15px;
     }
-    
+
     &:active,
     &:hover,
     &:focus {
       &::before {
-        border-color: $trust; 
+        border-color: $trust;
       }
     }
   }
-  
+
   label {
     @include adjust-font-size-to($text);
     position: relative;
@@ -52,5 +52,17 @@
     margin-bottom: rhythm(.35);
     padding-left: 35px;
     font-weight: 300;
+  }
+}
+
+.form-item--checkbox__item {
+  width: 40%;
+
+  @include breakpoint($bp2) {
+    width: 28%;
+  }
+
+  @include breakpoint($bp4) {
+    width: auto;
   }
 }
