TH-284 section menu background

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -42,9 +42,9 @@
       background-color: $primary-dark;
       width: 200px;
       position: absolute;
-      top: 10%;
+      top: 50px;
       right: -2em;
-      bottom: 10%;
+      bottom: 50px;
       z-index: -5;
     }
 
