TH-284 only target links with submenu

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -112,7 +112,7 @@
       background-color: rgba($white, 0.5);
     }
 
-    a {
+    .section-menu__link--with-sub {
       max-width: calc(100% - 50px);
     }
 
