TH-284 switch to alt button

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/omw-callout.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/omw-callout.twig
@@ -4,6 +4,6 @@
     <p>{{ text }}</p>
   </div>
   <div class="omw-callout__button">
-    <a class="button button-primary" href="{{ button.url }}">{{ button.text }}</a>
+    <a class="button button--alt" href="{{ button.url }}">{{ button.text }}</a>
   </div>
 </div>
