very WIP header/main nav

--- a/docroot/themes/custom/tower_health/templates/navigation/menu--main.html.twig
+++ b/docroot/themes/custom/tower_health/templates/navigation/menu--main.html.twig
@@ -18,6 +18,4 @@
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
-{% include "@molecules/menus/main-menu/main-menu.twig" with {
-  menu_items: items,
-} %}
+{% include "@molecules/menus/main-menu/main-menu.twig" %}
