--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -1,4 +1,5 @@
 {{ attach_library('tower_health/main-menu') }}
+
 <button href="#" id="toggle-expand" class="toggle-expand" aria-controls='main-nav__container'>
   <span class="toggle-expand__open">
     {% include "@atoms/04-images/icons/_icon.twig" with {
@@ -18,20 +19,13 @@
   </span>
 </button>
 <nav id='main-nav__container' class="main-nav__container" aria-expanded='true'>
-  <div class="utility" id="utility">
-    {% include "@molecules/menus/_menu.twig" with {
-      menu_class: "utility-menu",
-      items: utility_items
-    } %}
-  </div>
-  
+
   <div id="main-nav" class="main-nav">
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "main-menu",
-      items: header_menu_items,
-      menu_name: "main-menu"
+      menu_name: "main-menu",
     } %}
   </div>
-  
+
   <button aria-controls="main-nav__container" class="close-nav close-nav--mobile">Close Navigation Drawer</button>
 </nav>
