--- a/docroot/themes/custom/tower_health/templates/layout/region--header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--header.html.twig
@@ -13,7 +13,14 @@
  */
 #}
 {% extends "@organisms/site/site-header/site-header.twig" %}
-
-{% block header_content %}
-  {{ content }}
+{% block menu %}
+  {{ drupal_entity('block', 'tower_health_main_menu') }}
+{% endblock %}
+{% block logo %}
+  {% include "@atoms/04-images/00-image/figure.twig" with {
+    img_src: "../../components/images/TowerHealth_H.svg",
+    img_alt: "Tower Health",
+    img_url: header_logo_link_url|default('/'),
+    image_figure_base_class: 'header-logo'
+  } %}
 {% endblock %}
