get menus to display

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/utility-menu/utility-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/utility-menu/utility-menu.twig
@@ -1,8 +1,7 @@
 <div class="utility" id="utility">
-  {% block utility_nav %}
+  {% block utility %}
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "utility-menu",
-      items: utility_items
     } %}
   {% endblock %}
 </div>
