adding footer detail links

--- a/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
@@ -29,7 +29,7 @@
   <a href="tel:{{telephone}}">{{ telephone }}</a>
 {% endblock %}
 {% block details %}
-  Placeholder for detail links
+  {{ drupal_entity('block', 'footer_detail') }}
 {% endblock %}
 {% block legal %}
   {{ legal }}
