hook up footer menu

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -1,9 +1,11 @@
 <footer class="footer">
   <div class="footer-top">
     <div class="footer__links">
-      {% include "@molecules/menus/footer-menu/footer-menu.twig" with {
-        items: footer_items
-      } %}
+      {% block menu %}
+        {% include "@molecules/menus/footer-menu/footer-menu.twig" with {
+          items: footer_items
+        } %}
+      {% endblock %}
     </div>
     <div class="footer__info">
       {% block logo %}
