--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -22,7 +22,7 @@
   border-bottom: 4px solid $trust-ltr;
   border-radius: 0 5px 5px 0;
   width: 96%;
-  padding: 6em 1em 2em 2em;
+  padding: 2rem 1rem 2rem 2rem;
   box-shadow: 0 2px 8px rgba($black, 0.15);
   position: relative;
   z-index: 1;
@@ -35,8 +35,7 @@
     border: 4px solid $trust-ltr;
     border-radius: 5px;
     width: 75%;
-    padding: 2em;
-    padding-top: 6em;
+    padding: 2rem;
   }
 
   @include breakpoint($bp3) {
@@ -49,8 +48,8 @@
   }
 
   @include breakpoint($bp4) {
-    width: 80%;
-    padding: 6em 34% 2.25em 2em;
+    width: 85%;
+    padding: 2rem 34% 2rem 2rem;
   }
 
   .location-hero__title {
@@ -58,74 +57,42 @@
     margin: 0;
     color: $primary-dark;
     text-transform: uppercase;
-    font-size: 0.8em;
-    line-height: 1em;
     font-weight: 600;
     word-wrap: break-word;
-
-    @include breakpoint($bp0) {
-      font-size: 1em;
-    }
-
-    @include breakpoint("425px") {
-      font-size: 1.25em;
-    }
-
+    
     @include breakpoint($bp2) {
-      font-size: 1.5em;
-      line-height: 1em;
-    }
-
-    @include breakpoint("775px") {
-      font-size: 1.75em;
-    }
-
-    @include breakpoint($bp3) {
-      font-size: 2em;
-      line-height: 1.05em;
-    }
-
-    @include breakpoint($bp4) {
-      font-size: 2.5em;
-    }
-
-    @include breakpoint(1400px) {
-      font-size: 3em;
-    }
-
-    @include breakpoint($bp5) {
-      font-size: 3.5em;
-      line-height: 1.15em;
+      @include adjust-font-size-to($xxxl-heading, 1.75);
     }
   }
 }
 
 .location-label {
-  position: absolute;
-  top: 1.5em;
-  left: -.025em;
-  padding: 0.75em;
-  padding-left: 2em;
+  @include adjust-font-size-to($label, .8);
+  display: inline-block;
+  position: relative;
+  padding: .5em 1em .5em 0;
+  margin-bottom: 2em;
   background-color: $trust;
   color: $white;
   text-transform: uppercase;
   font-weight: 600;
   border-radius: 0 10px 10px 0;
   z-index: -10;
-
-  @include breakpoint($bp2) {
-    left: -3em;
-    padding-left: 5em;
-  }
-
-  @include breakpoint($bp3) {
-    left: -2em;
-    padding-left: 6em;
+  
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 4.5rem;
+    left: -4.5rem;
+    top: 0;
+    bottom: 0;
+    background-color: $trust;
   }
 
   @include breakpoint("1350px") {
-    left: calc(-1 * (100vw - 1350px) / 2);
-    padding-left: calc(((100vw - 1350px) / 2) + 4em)
+    // left: calc(-1 * (100vw - 1350px) / 2);
+    // padding-left: calc(((100vw - 1350px) / 2) + 4em)
   }
 }
 
