--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -1,7 +1,7 @@
 <div class="location-hero js-section-animation">
   <div class="location-hero__container">
     <div class="location-hero__content {% if img %}image{% endif %}">
-      <div class="location-label">{{ type }}</div>
+      <span class="location-label">{{ type }}</span>
       <h1 class="location-hero__title">{{ name }}</h1>
       <div class="location-details">
         <div class="location-details__first">
@@ -17,10 +17,10 @@
         </div>
         <div class="location-details__second">
           <span>Main</span>
-          <a href="tel{{phone.number}}">{{ phone.label }}</a>
+          <a href="tel:{{phone.number}}">{{ phone.label }}</a>
           <span>Appointments</span>
           {% for number in numbers %}
-            <a href="tel{{number.number}}">{{ number.label }}</a>
+            <a href="tel:{{number.number}}">{{ number.label }}</a>
           {% endfor %}
         </div>
       </div>
