--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -31,6 +31,7 @@ $base-font-size: 16px; // The font size set on the root html element.
 $base-line-height: 24px; // This line-height determines the basic unit of vertical rhythm.
 
 // TYPE SCALE
+$lg-hero-heading: 3.25 * $base-font-size;
 $hero-heading: 3 * $base-font-size;
 $xxxl-heading: 2.75 * $base-font-size;
 $xxl-heading: 2.25 * $base-font-size;
@@ -93,6 +94,7 @@ $bp2: 600px;
 $bp3: 900px;
 $bp4: 1200px;
 $bp5: 1350px;
+$bp6: 1500px;
 
 $nav-breakpoint: 1025px;
 
