--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -64,9 +64,17 @@
       right: 50%;
       top: -11em;
     }
-
+    
     @include breakpoint($bp5) {
+      right: 52%;
+    }
+
+    @include breakpoint($bp6) {
       left: calc(( 100vw - 1500px ) / 2 * -1);
+      
+      .image-background {
+        max-width: 650px;
+      }
     }
   }
 
@@ -110,6 +118,10 @@
 
     @include breakpoint($bp4) {
       padding: 2.5em 2em 3.5em 45%;
+    }
+    
+    @include breakpoint($bp5) {
+      padding: 2.5em 2em 3.5em 42%;
     }
 
     .button {
