modify the animation a bit

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -204,6 +204,9 @@
     &.cta-banner-list__background {
       animation: fadeinSlight .85s ease-in-out .5s forwards;
     }
+  }
+  
+  .in-mid-view {
     
     &.cta-banner-list__buttons {
       animation: fadein .65s ease-in-out forwards;
