--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -204,23 +204,28 @@
     &.cta-banner-list__background {
       animation: fadeinSlight .85s ease-in-out .5s forwards;
     }
-  }
-  
-  .in-mid-view {
     
     &.cta-banner-list__buttons {
       animation: fadein .65s ease-in-out forwards;
       
-      .icon-button {
-        animation: fadeInRight .35s ease-in-out forwards;
-      }
+      // .icon-button {
+      //   animation: fadeInRight .35s ease-in-out forwards;
+      // }
       
-      @for $i from 1 through 6 {
-        .icon-button:nth-child(#{$i}) {
-          // Delay the animation. Delay increases as items loop.
-          animation-delay: .25 + ($i * (1s / 12));
-        }
-      }
+      // @for $i from 1 through 6 {
+      //   .icon-button:nth-child(#{$i}) {
+      //     // Delay the animation. Delay increases as items loop.
+      //     animation-delay: .25 + ($i * (1s / 12));
+      //   }
+      // }
     }
+    
+    &.icon-button {
+      animation: fadeInRight .35s ease-in-out forwards;
+    }
+  }
+  
+  .in-mid-view {
+    
   }
 }
