--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
@@ -18,8 +18,7 @@
       address_1: hero.address_1,
       address_2: hero.address_2,
       directions: hero.directions,
-      phone: hero.phone,
-      numbers: hero.numbers,
+      phones: hero.phones,
       img: hero.img,
       classes: hero.classes,
     } %}
