adding custom blocks for contact and legal

--- a/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
@@ -27,13 +27,11 @@
   Placeholder for social links
 {% endblock %}
 {% block contact %}
-  <span>{{ address_1 }}</span>
-  <span>{{ address_2 }}</span>
-  <a href="tel:{{telephone}}">{{ telephone }}</a>
+  {{ drupal_entity('block', 'tower_health_footer_contact_info') }}
 {% endblock %}
 {% block details %}
   {{ drupal_entity('block', 'footer_detail') }}
 {% endblock %}
 {% block legal %}
-  {{ legal }}
+  {{ drupal_entity('block', 'footer_legal_disclaimer') }}
 {% endblock %}
