--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -243,6 +243,10 @@
       @include breakpoint($bp3) {
         text-align: right;
       }
+
+      p {
+        margin-bottom: 0;
+      }
     }
   }
 }
