block for footer details

--- a/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
@@ -30,7 +30,7 @@
   {{ drupal_entity('block', 'tower_health_footer_contact_info') }}
 {% endblock %}
 {% block details %}
-  {{ drupal_entity('block', 'footer_detail') }}
+  {{ drupal_entity('block', 'tower_health_footer_detail_menu') }}
 {% endblock %}
 {% block legal %}
   {{ drupal_entity('block', 'footer_legal_disclaimer') }}
