--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -34,22 +34,38 @@
   @include breakpoint($bp2) {
     border: 4px solid $trust-ltr;
     border-radius: 5px;
-    width: 75%;
     padding: 3rem 2rem;
+    width: 100%;
   }
 
   @include breakpoint($bp3) {
-    width: 80%;
-    padding-right: 28%;
     box-shadow: none;
     position: static;
     border-radius: 8px;
     background-color: transparent;
   }
+  
+  &.image {
+    margin-top: 3.5em;
+    
+    @include breakpoint($bp0) {
+      margin-top: 5em;
+    }
+    
+    @include breakpoint($bp2) {
+      margin-top: 8em;
+      width: 80%;
+    }
 
-  @include breakpoint($bp4) {
-    width: 85%;
-    padding-right: 34%;
+    @include breakpoint($bp3) {
+      width: 80%;
+      padding-right: 28%;
+    }
+
+    @include breakpoint($bp4) {
+      width: 85%;
+      padding-right: 34%;
+    }
   }
 
   .location-hero__title {
@@ -68,6 +84,7 @@
 
 .location-label {
   @include adjust-font-size-to($label, .8);
+  @extend %track-out;
   display: inline-block;
   position: relative;
   padding: .5em 1em .5em 0;
@@ -76,7 +93,7 @@
   color: $white;
   text-transform: uppercase;
   font-weight: 600;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 6px 6px 0;
   z-index: -10;
   
   &::before {
@@ -99,36 +116,54 @@
   }
 }
 
-
 .location-details {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   @include breakpoint($bp2) {
-    flex-wrap: nowrap;
     justify-content: space-between;
   }
 }
 
 .location-details__item {
 
-  @include breakpoint("412px") {
+  @include breakpoint($bp1) {
     width: 48%;
   }
   
-  .icon-button {
-    margin-top: 1.5em;
+  @include breakpoint($bp4) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    .image & {
+      display: block;
+    }
+  }
+}
+
+.location-details__child {
+  margin-bottom: 1em;
+  
+  @include breakpoint($bp4) {
+    width: 48%;
+    
+    .image & {
+      width: auto;
+    }
   }
 }
 
 .location-details__label {
+  @include adjust-font-size-to($label, .9);
   @extend %track-out;
   text-transform: uppercase;
-  font-size: 0.9em;
   font-weight: 400;
   display: block;
   color: $primary-dark;
-  margin: 1em 0 0.5em 0;
+  margin: 0 0 .5em;
 }
 
 .location-details__info {
