--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -5,24 +5,30 @@
       <h1 class="location-hero__title">{{ name }}</h1>
       <div class="location-details">
         <div class="location-details__item">
-          <span class="location-details__label">Address</span>
-          <span class='location-details__info'>{{ address_1 }}</span>
-          <span class='location-details__info'>{{ address_2 }}</span>
-          {% include "@atoms/icon-button/icon-button.twig" with {
-            "url": directions.url,
-            "icon": directions.icon,
-            "text": directions.text,
-            "variation": directions.variation,
-          } %}
+          <div class="location-details__child">
+            <span class="location-details__label">Address</span>
+            <span class='location-details__info'>{{ address_1 }}</span>
+            <span class='location-details__info'>{{ address_2 }}</span>
+          </div>
+          <div class="location-details__child">
+            {% include "@atoms/icon-button/icon-button.twig" with {
+              "url": directions.url,
+              "icon": directions.icon,
+              "text": directions.text,
+              "variation": directions.variation,
+            } %}
+          </div>
         </div>
         <div class="location-details__item">
           {% for phone in phones %}
+            <div class="location-details__child">
             {% if phone.label %}
               <span class="location-details__label">{{ phone.label }}</span>
             {% endif %}
             {% for item in phone.numbers %}
               <a class="location-details__number" href="tel:+1{{item.number}}">{% if item.label %}{{item.label}}{% else %}{{item.number}}{% endif %}</a>
             {% endfor %}
+            </div>
           {% endfor %}
         </div>
       </div>
