--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -60,6 +60,7 @@
     @include breakpoint($bp3) {
       width: 80%;
       padding-right: 28%;
+      margin-top: .5em;
     }
 
     @include breakpoint($bp4) {
