--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
@@ -1,32 +1,31 @@
 .hours-block {
   margin-top: 6em;
+}
 
-  .hours-block__label {
-    @extend %track-out;
-    text-transform: uppercase;
-    font-size: 0.9em;
-    font-weight: 400;
-    display: block;
-    color: $primary-dark;
-    margin: 1em 0 0.5em 0;
+.hours-block__label {
+  @include adjust-font-size-to($label, .9);
+  @extend %track-out;
+  text-transform: uppercase;
+  display: block;
+  color: $primary-dark;
+  margin: 0 0 1em 0;
+}
+
+.hours-block__days {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.hours-block__day {
+  margin-bottom: 0.5em;
+
+  span {
+    font-weight: 700;
   }
+}
 
-  .hours-block__days {
-    padding-left: 0;
-    list-style: none;
-  }
-
-  .hours-block__day {
-    margin-bottom: 0.5em;
-
-    span {
-      font-weight: 700;
-    }
-  }
-
-  .hours-block__text {
-    margin: 0.5em 0;
-    font-style: italic;
-    font-size: $label;
-  }
+.hours-block__text {
+  @include adjust-font-size-to($label, .9);
+  margin: 0.5em 0;
 }
