additional adjustments to hours block for responsive behaviour

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
@@ -1,5 +1,9 @@
 .hours-block {
-  margin-top: 6em;
+  margin-top: 2em;
+  
+  @include breakpoint($bp3) {
+    margin-top: 6em;
+  }
 }
 
 .hours-block__label {
@@ -15,6 +19,12 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  
+  @include breakpoint($bp1 $bp3) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .hours-block__day {
@@ -22,6 +32,14 @@
 
   span {
     font-weight: 700;
+    
+    @include breakpoint($bp1 $bp2) {
+      display: block
+    }
+  }
+  
+  @include breakpoint($bp1 $bp3) {
+    width: 48%;
   }
 }
 
