--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
@@ -1,76 +1,84 @@
 .link-list {
-  padding: 2em;
+  padding: 2em 0;
   position: relative;
   margin-top: 3em;
-
-  .link-list__title {
-    color: $primary-dark;
-    text-transform: uppercase;
-    font-size: 2em;
-    margin-bottom: 1em;
-  }
-
-  .link-list__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-
-    .link-list__link {
-      width: 100%;
-      padding: .5em 0 0.5em 0;
-
-      @include breakpoint($bp4) {
-        width: 50%;
-      }
-
-      a {
-        color: $trust-aa;
-        font-size: 1.25em;
-        font-weight: 600;
-        text-decoration: none;
-
-        &:hover,
-        &:focus {
-          color: $primary-dark;
-          text-decoration: underline;
-        }
-      }
-    }
-  }
+  border-top: 6px solid $growth;
 
   &::before {
     content: '';
     position: absolute;
     height: 1px;
     border-top: 6px solid $growth;
-    border-radius: 3px;
     left: -2em;
-    width: 95%;
-    top: 0;
+    width: 2em;
+    top: -6px;
 
-    @include breakpoint("1350px") {
+    @include breakpoint($bp5) {
       left: calc(-1 * (((100vw - 1350px) / 2) + 2em));
+      width: calc(((100vw - 1350px) / 2) + 2em);
     }
+  }
+}
+
+.link-list__title {
+  color: $primary-dark;
+  margin-bottom: 1em;
+}
+
+.link-list__wrapper {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  
+  @include breakpoint($bp2) {
+    column-count: 2;
+    column-gap: 1em;
+  }
+}
+
+.link-list__link {
+  font-weight: 600;
+  width: 100%;
+  break-inside: avoid;
+
+  a {
+    display: inline-block;
+    color: $trust-aa;
+    text-decoration: none;
+    padding: .35em 0;
+
+    &:hover,
+    &:focus {
+      color: $primary-dark;
+      text-decoration: underline;
+    }
+  }
+  
+  @include breakpoint($bp3) {
+    a {
+      padding: .25em 0;
+    }
+  }
+  
+  @include breakpoint($bp4) {
+    @include adjust-font-size-to($xs-heading, 1.1);
   }
 }
 
 .cssanimations {
 
   // default states
-  .link-list__title {
+  .link-list__title,
+  .link-list__link  {
     opacity: 0;
   }
 
   // animating in
   .in-view {
     .link-list__title,
-    .link-list__title:before {
-      opacity: 1;
-      animation: fadeInLeftScale .25s ease-in-out forwards;
-    }
-
     .link-list__link {
       opacity: 1;
-      animation: fadeInUp .65s ease-in-out forwards;
+      animation: fadeInLeft .35s ease-in-out forwards;
     }
   }
 }
