--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/link-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/link-list.twig
@@ -1,10 +1,10 @@
 <div class="link-list js-section-animation">
   <h2 class="link-list__title">{{ title }}</h2>
-  <div class="link-list__wrapper">
+  <ul class="link-list__wrapper">
     {% for item in items %}
-      <div class="link-list__link">
+      <li class="link-list__link">
         <a href="{{ item.link }}">{{ item.text }}</a>
-      </div>
+      </li>
     {% endfor %}
-  </div>
+  </ul>
 </div>
