adjust print styles

--- a/docroot/themes/custom/tower_health/components/_patterns/_print.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/_print.scss
@@ -103,7 +103,11 @@
     .cta-banner-list__background,
     .cta-banner-list__buttons,
     .icon-button,
-    .homepage-hero__image {
+    .homepage-hero__image,
+    .link-list__title,
+    .link-list__link,
+    .location-hero__content,
+    .location-hero__image {
       opacity: 1;
       transition: none;
       animation: none;
@@ -114,6 +118,7 @@
       margin-top: 10px;
     }
     
+    .location-hero__image .image-background.top-left .image::before,
     .homepage-hero__image .image-background.top-left .image::before {
       margin-left: -20px;
       margin-top: -10px;
