--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
@@ -1,9 +1,10 @@
 .omw-callout {
   @include grid;
-  background-color: $trust-ltst;
+  position: relative;
+  background-color: $primary-dark;
   padding: 2em;
-  border-radius: 5px;
-  margin: 2em 0;
+  border-radius: 8px;
+  margin: 2em 0 3.5em;
   text-align: center;
 
   @include breakpoint($bp3) {
@@ -11,25 +12,47 @@
     justify-content: space-between;
     align-items: center;
     text-align: left;
+    margin-right: 12%;
+  }
+}
+
+.omw-callout__title {
+  @include adjust-font-size-to($xs-heading, 1.1);
+  margin-top: 0;
+  margin-bottom: .25em;
+  color: $white;
+}
+
+.omw-callout__text {
+  color: $white;
+  margin-bottom: 1em;
+  width: 100%;
+  
+  p {
+    margin-bottom: 0;
+    margin-top: 0;
   }
 
-  .omw-callout__text {
-
-    @include breakpoint($bp3) {
-      width: 60%;
-    }
-
-    h2 {
-      margin-top: 0;
-    }
+  @include breakpoint($bp3) {
+    width: 75%;
+    margin-bottom: 0;
   }
+  
+  @include breakpoint($bp5) {
+    width: 90%;
+    margin-bottom: 0;
+  }
+}
 
-  .omw-callout__button {
-    margin: 0 auto;
+.omw-callout__button {
+  margin: 0 auto;
+  margin-bottom: -3.5em;
 
-    @include breakpoint($bp3) {
-      width: 30%;
-      text-align: right;
-    }
+  @include breakpoint($bp3) {
+    position: absolute;
+    right: -12%;
+    width: 45%;
+    text-align: right;
+    margin-bottom: 0;
   }
 }
