Fix footer logo.

--- a/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
@@ -18,7 +18,7 @@
 {% endblock %}
 {% block logo %}
   {% include "@atoms/04-images/00-image/figure.twig" with {
-    img_src: directory ~ "/components/images/TowerHealth_V.svg",
+    img_src: "/" ~ directory ~ "/components/images/TowerHealth_V.svg",
     img_alt: "Tower Health Logo",
     img_url: logo_link_url|default('/'),
   } %}
