--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
@@ -1,18 +1,16 @@
-<div class="image-teaser js-section-animation">
+<div class="image-teaser js-section-animation {% if orientation %}image-teaser--{{orientation}}{% else %}image-teaser--def{% endif %}">
   <div class="image-teaser__image">
     <img src="{{ img.src }}" alt="{{ img.alt }}"/>
   </div>
-  <div class="image-teaser__text">
-    <div class="button-wrapper">
-      <h3>{{ title }}</h3>
-      <p>{{ text }}</p>
-      {% if links|length == 1 %}
-        <a class="button button-primary" href="{{ links|first.url }}">{{ links|first.text }}</a>
-      {% else %}
-        {% for link in links %}
-          <a class="image-teaser__link" href="{{ link.url }}">{{ link.text }}</a>
-        {% endfor %}
-      {% endif %}
-    </div>
+  <div class="image-teaser__content">
+    <h3 class='image-teaser__title'>{{ title }}</h3>
+    <div class="image-teaser__text">{{ text }}</div>
+    {% if links|length == 1 %}
+      <a class="button button-primary" href="{{ links|first.url }}">{{ links|first.text }}</a>
+    {% else %}
+      {% for link in links %}
+        <a class="image-teaser__link" href="{{ link.url }}">{{ link.text }}</a>
+      {% endfor %}
+    {% endif %}
   </div>
 </div>
