adjust print styles

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
@@ -59,6 +59,7 @@
       } %}
 
     {% include "@organisms/image-teaser-banner/image-teaser-banner.twig" with {
+        orientation: image_callout.orientation,
         img: image_callout.img,
         title: image_callout.title,
         text: image_callout.text,
