--- a/docroot/themes/custom/tower_health/components/_patterns/_print.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/_print.scss
@@ -107,7 +107,9 @@
     .link-list__title,
     .link-list__link,
     .location-hero__content,
-    .location-hero__image {
+    .location-hero__image,
+    .image-teaser__content,
+    .image-teaser__image {
       opacity: 1;
       transition: none;
       animation: none;
