--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
@@ -5,8 +5,7 @@
     position: relative;
     margin-top: 2em;
     margin-bottom: 2em;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding: 3em 0;
     
     .image-teaser--reverse & {
       display: flex;
